--- a/practices/big-practice/src/style.css
+++ b/practices/big-practice/src/style.css
@@ -14,6 +14,6 @@
 }
 
 /* Custom background color for selected row */
-.ag-theme-alpine .ag-row-selected {
+.ag-row-selected {
   background-color: #F4F5F9 !important;
 }
