--- a/practices/big-practice/src/style.css
+++ b/practices/big-practice/src/style.css
@@ -1,8 +1,5 @@
 .custom-header {
-  font-size: 16px;
-  font-weight: 500;
-  color: #475466;
-  background-color: white;
+  background-color: #F4F5F9;
 }
 
 .ag-header-viewport {
@@ -18,6 +15,3 @@
   background-color: #F4F5F9 !important;
 }
 
-.custom-header {
-  background-color: #F4F5F9 !important;
-}
